# 9kvc

./: 9k  9k.cabal  CHANGELOG.md  NOTEBOOK  default.nix  flake.nix  gematria.db  glomp.service  result  static.nix
app/: Content.hs  Main.hs  Style.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
js/: disgusting.js
src/: MyLib.hs
texts/: blind_alley.txt  test.txt  trolling.txt
tunes/: 9lb_Drum.txt  Australia.txt  Batteries.txt  cool.txt  double.txt  entering_heaven_alive.txt  hymn.txt  iii14.txt  love.txt  meant.txt  nte.txt  ping pong.txt  porphyry.s98  porphyry.txt  return.txt  star.txt  taylor.txt  thanks_for_ten_years.txt  tower_of_mercy.txt  vanilla.txt  voice_of_resurgence.txt
