cabal-version:      3.0
name:               9k
version:            0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Seth Livy
maintainer:         no-reply@goarmy.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable 9k
    import:           warnings
    main-is:          Main.hs
    other-modules:    Style, Content
    -- other-extensions:
    build-depends:
        base
      , directory
      , http-media
      , lucid
      , text
      , wai
      , warp
      , sqlite-simple
      , scotty
      , wai-middleware-static
      , wai-extra
      , bytestring
      , filepath
    hs-source-dirs:   app
    default-language: Haskell2010
